Change FTF>water in the emails

--- a/app/views/ftf/awareness/water-grant-guidance.html
+++ b/app/views/ftf/awareness/water-grant-guidance.html
@@ -174,7 +174,7 @@
 
       <h2 class="govuk-heading-l" id="link02">Stage 2: make a full application</h2>
       <p class="govuk-body">RPA will invite you to make a full application and send you an application form if your Stage 1: online application scores highly enough against the funding priorities.</p>
-      <p class="govuk-body">You will need to fill in the full application form and email it with your supporting documents to <a href="#">ftf@rpa.gov.uk</a>.</p>
+      <p class="govuk-body">You will need to fill in the full application form and email it with your supporting documents to <a href="#">water@rpa.gov.uk</a>.</p>
       <p class="govuk-body">RPA must receive your full application and supporting documents by 23:59pm on 31 October 2024.</p>
       <p class="govuk-body">If you do not submit a full application by this date, your application will be withdrawn.</p>
       <p class="govuk-body">RPA will assess value for money alongside the funding priorities. This may affect your overall project score.</p>
@@ -189,7 +189,7 @@
         <li>project number provided by RPA in your invitation to apply for a full application email</li>
       </ul>
       <p class="govuk-body">We know that some minor project details may change since you completed the online application, for example, changes to project costs as they are finalised. However, the main details of your project should not be significantly different to your online application. As this is a competitive scheme, any changes may result in us no longer being able to support your project.</p>
-      <p class="govuk-body">You should contact RPA by email <a href="#">ftf@rpa.gov.uk</a> before you submit your full application if you need to discuss significant changes to your online application.</p>
+      <p class="govuk-body">You should contact RPA by email <a href="#">water@rpa.gov.uk</a> before you submit your full application if you need to discuss significant changes to your online application.</p>
 
       <br><br><br>
       <h2 class="govuk-heading-l" id="link03">What information you need to provide</h2>
@@ -315,7 +315,7 @@
       <br><br><br>
       <h2 class="govuk-heading-l" id="link06">Contact RPA</h2>
       <p class="govuk-body">Contact the Farming Transformation Fund (FTF) team at RPA if you’re not sure if you are eligible to apply, or if you are not able to access the online checker.</p>
-      <p class="govuk-body">Email: <a href="#">FTF@rpa.gov.uk</a></p>
+      <p class="govuk-body">Email: <a href="#">water@rpa.gov.uk</a></p>
       <p class="govuk-body">Telephone: 0300 0200 301 and follow options for the Farming Transformation Fund scheme.</p>
       <p class="govuk-body">Post: Farming Transformation Fund, Grants Service, Rural Payments Agency, Sterling House, Dix's Field, Exeter, EX1 1QA.</p>
 
