Change FTF > Water

--- a/app/views/ftf/application/v3-0/email2.html
+++ b/app/views/ftf/application/v3-0/email2.html
@@ -152,7 +152,7 @@
             <strong>Reminder:</strong>
             Application deadline is 11:59pm on <strong>7 July 2024</strong>.<br><br>
 
-            You have 2 weeks left to submit an application for the Farming Transformation Fund Water Management grant.
+            You have 2 weeks left to submit an application for the Water Management grant.
 
 
 
@@ -243,7 +243,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">water@rpa.gov.uk</a></p>
             </div> 
   
            <br>
