--- a/app/views/ftf/agreement/v2-0/agreement-detail.html
+++ b/app/views/ftf/agreement/v2-0/agreement-detail.html
@@ -20,7 +20,7 @@ Agreement details
         <span class="govuk-caption-xl">Sign agreement</span>
         <h1 class="govuk-heading-xl">Your grant funding agreement</h1>
 
-        <p class="govuk-body-l">Your application for the Farming Transformation Fund Water Resource Management grant has been approved.</p>
+        <p class="govuk-body-l">Your application for the Water Management grant has been approved.</p>
 
         <p class="govuk-body">Contents</p>
         <ul class="govuk-list">
