--- a/app/views/ftf/eoi/v2-0/confirmation.html
+++ b/app/views/ftf/eoi/v2-0/confirmation.html
@@ -46,7 +46,7 @@
           <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
             <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
             </p>
-          <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+          <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">water@rpa.gov.uk</a></p>
 
        <br> -->
 
