--- a/app/views/ftf/eoi/v2-0/email_eoi-submitted.html
+++ b/app/views/ftf/eoi/v2-0/email_eoi-submitted.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Water Management grant EOI received<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Interest submitted: Water Management grant<br><br>
 
           <script>
             function navigateToPage() {
@@ -192,7 +192,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">water@rpa.gov.uk</a></p>
             </div> 
   
            <br>
