Agreement backlog iteration

--- a/app/views/ftf/agreement/v2-0/email-agreement-accepted.html
+++ b/app/views/ftf/agreement/v2-0/email-agreement-accepted.html
@@ -156,7 +156,7 @@
               <li><a href="/_common/not-testing.html">FTF terms and conditions</a></li>
 
               <br>
-              Your first claim window is now open. To submit a claim, you must <a href="/_common/not-testing.html">download a claim form</a>.
+              Your first claim is due by 29 November 2024. To submit a claim, you must <a href="/_common/not-testing.html">download a claim form</a>.
 
 
 
