Updated equipment to items

--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -10,7 +10,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/items/equipment-list" aria-describedby="application-details-2-status">Select your equipment</a>
+          <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/items/equipment-list" aria-describedby="application-details-2-status">Select your items</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -21,7 +21,7 @@
     
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>About your equipment</div>
+          <div>About your items</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -60,7 +60,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--light-blue">
@@ -71,7 +71,7 @@
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <div>About your equipment</div>
+        <div>About your items</div>
       </div>
       <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
         Cannot start yet
@@ -109,7 +109,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -118,7 +118,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/about-items/livestock-information" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/about-items/livestock-information" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -159,7 +159,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -168,7 +168,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--light-blue">
@@ -209,7 +209,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -218,7 +218,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -258,7 +258,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -267,7 +267,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -307,7 +307,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -316,7 +316,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -356,7 +356,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -365,7 +365,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -403,7 +403,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -412,7 +412,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -459,7 +459,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -468,7 +468,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
