--- a/app/views/fetf/application/v1-0/about-items/equipment-address.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-address.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Will you store the equipment at the main business address? {% endblock %}
+{% block pageTitle %} Will you store the items at the main business address? {% endblock %}
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
@@ -17,10 +17,10 @@
     <form action="/fetf-items-business-address" method="post">
 
     <div class="govuk-form-group">
-      <span class="govuk-caption-l">About your equipment</span>
+      <span class="govuk-caption-l">About your items</span>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          Will you store the equipment at the main business address?
+          Will you store the items at the main business address?
         </legend>
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
