--- a/app/views/fetf/application/v1-0/about-items/equipment-location-details.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-location-details.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Will you store the equipment at the main business address? {% endblock %}
+{% block pageTitle %} Will you store the items at the main business address? {% endblock %}
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
@@ -16,8 +16,8 @@
 
     <form action="/fetf-items-other-locations" method="post">
 
-      <span class="govuk-caption-l">About your equipment</span>
-      <h1 class="govuk-heading-l">Equipment location details</h1>
+      <span class="govuk-caption-l">About your items</span>
+      <h1 class="govuk-heading-l">Items location details</h1>
 
       <div class="govuk-form-group">
         <h2 class="govuk-label-wrapper">
