--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Equipment details summary {% endblock %}
+{% block pageTitle %} Items details summary {% endblock %}
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
@@ -13,11 +13,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-l">About your equipment</span>
+    <span class="govuk-caption-l">About your items</span>
 
     <form action="/fetf-items-summary" method="post">
 
-    <h1 class="govuk-heading-l">Equipment details summary</h1>
+    <h1 class="govuk-heading-l">Items details summary</h1>
 
     <h2 class="govuk-heading-m">Livestock information</h2>
 
@@ -46,7 +46,7 @@
       </div>
     </dl>
 
-    <h2 class="govuk-heading-m">Equipment location</h2>
+    <h2 class="govuk-heading-m">Items location</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -63,7 +63,7 @@
     </dl>
 
 
-    <h2 class="govuk-heading-m">Equipment contracting</h2>
+    <h2 class="govuk-heading-m">Items contracting</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
