--- a/app/views/fetf/application/v1-0/about-items/livestock-information.html
+++ b/app/views/fetf/application/v1-0/about-items/livestock-information.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Will you store the equipment at the main business address? {% endblock %}
+{% block pageTitle %} Will you store the items at the main business address? {% endblock %}
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
@@ -16,7 +16,7 @@
 
     <form action="/fetf-items-livestock-information" method="post">
 
-      <span class="govuk-caption-l">About your equipment</span>
+      <span class="govuk-caption-l">About your items</span>
       <h1 class="govuk-heading-l">Livestock information</h1>
 
       <div class="govuk-form-group">
