--- a/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Will the equipment be used for contracting? {% endblock %}
+{% block pageTitle %} Will the items be used for contracting? {% endblock %}
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
@@ -17,10 +17,10 @@
     <form action="/fetf-items-contracting" method="post">
 
     <div class="govuk-form-group">
-      <span class="govuk-caption-l">About your equipment</span>
+      <span class="govuk-caption-l">About your items</span>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          Will the equipment be used for contracting?
+          Will the items be used for contracting?
         </legend>
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
