--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -3,7 +3,7 @@
       {% if (data['fetf-apply'] == "01") %}
 
       <h2 class="govuk-prototype-kit-task-list__section">
-        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+        Apply
       </h2>
 
       <ul class="govuk-task-list">
@@ -30,7 +30,7 @@
     
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Check your business and personal details</div>
+          <div>Check your details</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -53,7 +53,7 @@
     {% elif (data['fetf-apply'] == "02a") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+    Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -102,7 +102,7 @@
     {% elif (data['fetf-apply'] == "02b") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+    Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -152,7 +152,7 @@
     {% elif (data['fetf-apply'] == "02c") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+    Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -202,7 +202,7 @@
     {% elif (data['fetf-apply'] == "02d") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+    Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -251,7 +251,7 @@
     {% elif (data['fetf-apply'] == "02e") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+      Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -300,7 +300,7 @@
     {% elif (data['fetf-apply'] == "02f") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+    Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -349,7 +349,7 @@
     {% elif (data['fetf-apply'] == "03a") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+     Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -396,7 +396,7 @@
     {% elif (data['fetf-apply'] == "03b") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+    Apply
     </h2>
 
     <ul class="govuk-task-list">
@@ -452,7 +452,7 @@
     {% elif (data['fetf-apply'] == "03c") %}
       
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Apply
+      Apply
     </h2>
 
     <ul class="govuk-task-list">
