--- a/app/views/fetf/_includes/activity-list_task-section_claim.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim.html
@@ -3,7 +3,7 @@
     {% if (data['fetf-claim'] == "01") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+    Submit claim
     </h2>
     
     <ul class="govuk-task-list">
@@ -39,7 +39,7 @@
     {% elif (data['fetf-claim'] == "02a") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+      Submit claim
     </h2>
     
     <ul class="govuk-task-list">
@@ -76,7 +76,7 @@
     {% elif (data['fetf-claim'] == "02b") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+     Submit claim
     </h2>
     
     <ul class="govuk-task-list">
@@ -117,7 +117,7 @@
     {% elif (data['fetf-claim'] == "02c") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+     Submit claim
     </h2>
     
     <ul class="govuk-task-list">
@@ -156,7 +156,7 @@
     {% elif (data['fetf-claim'] == "02d") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+     Submit claim
     </h2>
     
     <ul class="govuk-task-list">
@@ -197,7 +197,7 @@
     {% elif (data['fetf-claim'] == "03") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+      Submit claim
     </h2>
     
     <ul class="govuk-task-list">
