--- a/app/views/fetf/application/v1-0/item-quantity.html
+++ b/app/views/fetf/application/v1-0/item-quantity.html
@@ -24,7 +24,7 @@
     </label>
   </h1>
   <div id="event-name-hint" class="govuk-hint">
-    Maximum quantity for this item is 3
+    Maximum quantity: 3
   </div>
   <div class="govuk-input__wrapper">
     <input class="govuk-input govuk-input--width-5" id="quantity" name="quantity" type="text" spellcheck="false">
@@ -34,7 +34,7 @@
 
 
 <button type="submit" class="govuk-button" data-module="govuk-button">
-  Add quantity
+  Continue
 </button>
 <br>
 
