--- a/app/views/fetf/application/v1-0/items/equipment.html
+++ b/app/views/fetf/application/v1-0/items/equipment.html
@@ -34,7 +34,7 @@
     <p class="govuk-body-l">{{ item.summary }}</p>
 
     <p class="govuk-body-l"><strong>Grant amount per item: </strong>£{{ item.grantValue }}</p>
-    <p class="govuk-body-s"><strong>Maximum quantity of this item: </strong>3</p>
+    <p class="govuk-body-s"><strong>Maximum quantity: </strong>3</p>
     <p class="govuk-body-s"><strong>Expected average cost of item: </strong>£{{ item.averageValue }}</p>
     <p class="govuk-body-s"><strong>Percentage paid towards item: </strong>{{ item.grantPercentage }}%</p>
     <hr style="margin-bottom: 20px; margin-top: 20px;">
