--- a/app/views/fetf/index.html
+++ b/app/views/fetf/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-fetf.html" %}
+{% extends "layouts/main-no-title.html" %}
 
 {% block pageTitle %}
 Farming Equipment and Technology Fund
