--- a/app/views/fetf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/fetf/_includes/activity-list_task-section_agreement.html
@@ -2,7 +2,7 @@
 
     {% if (data['fetf-agree'] == "01") %}
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">2. </span> Sign agreement
+    Sign agreement
     </h2>
 
     <ul class="govuk-task-list">
@@ -26,7 +26,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Accept agreement</div>
+          <div>Sign and accept agreement</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
           Cannot start yet
@@ -36,7 +36,7 @@
 
     {% elif (data['fetf-agree'] == "02a") %}
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">2. </span> Sign agreement
+    Sign agreement
     </h2>
 
     <ul class="govuk-task-list">
@@ -74,7 +74,7 @@
 
     {% elif (data['fetf-agree'] == "02b") %}
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">2. </span> Sign agreement
+    Sign agreement
     </h2>
 
     <ul class="govuk-task-list">
@@ -110,7 +110,7 @@
 
     {% elif (data['fetf-agree'] == "02c") %}
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">2. </span> Sign agreement
+    Sign agreement
     </h2>
 
     <ul class="govuk-task-list">
@@ -146,7 +146,7 @@
 
     {% elif (data['fetf-agree'] == "02d") %}
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">2. </span> Sign agreement
+    Sign agreement
     </h2>
 
     <ul class="govuk-task-list">
@@ -182,7 +182,7 @@
 
     {% elif (data['fetf-agree'] == "03") %}
     <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">2. </span> Sign agreement
+    Sign agreement
     </h2>
 
     <ul class="govuk-task-list">
