--- a/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
+++ b/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-fetf.html" %}
+{% extends "layouts/main-no-title.html" %}
 
 {% set pageName="How to apply for the Water Management Grant Round 3" %}
 
@@ -309,13 +309,16 @@
         <br><br>
         
 
-        <p class="govuk-body"><strong>Productivity and Slurry grant</strong></p>
+        <p class="govuk-body"><strong>Productivity grant</strong></p>
         <a href="/fetf/application/v1-0/login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           Apply now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
           </svg>
         </a>
+        <p class="govuk-body"><strong>Slurry grant</strong></p>
+        <p class="govuk-body">Now closed for applications.</p>
+        <br><br>
         <p class="govuk-body"><strong>Animal Health and Welfare grant</strong></p>
         <p class="govuk-body">Now closed for applications.</p>
 
