--- a/app/views/layouts/main-no-title.html
+++ b/app/views/layouts/main-no-title.html
@@ -6,16 +6,11 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
 
 
+
 {% block header %}
 {{ govukHeader({
-  useTudorCrown: true,
-  serviceName: "Apply for a Farming Equipment and Technology Fund: Productivity grant",
-  serviceUrl: "/fetf/index"
+  serviceName: ""
 }) }}
-{% endblock %}
-
-{% block content %}
-{% include "../../_includes/sub-header_business-applicant-details.html" %}
 {% endblock %}
 
 {% block footer %}
