Updated design for 'Selected items' summary table

--- a/app/views/fetf/application/v1-0/selected-items.html
+++ b/app/views/fetf/application/v1-0/selected-items.html
@@ -26,11 +26,11 @@
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header">Item name</th>
-      <th scope="col" class="govuk-table__header">Grant amount (item)</th>
-      <th scope="col" class="govuk-table__header">Item score</th>
-      <th scope="col" class="govuk-table__header">Quantity</th>
-      <th scope="col" class="govuk-table__header">Remove</th>
-      <th scope="col" class="govuk-table__header" style="text-align: right;">Grant amount (total)</th>
+      <th scope="col" class="govuk-table__header">Code</th>
+      <th scope="col" class="govuk-table__header" style="text-align: right;">Quantity</th>
+      <th scope="col" class="govuk-table__header" style="text-align: right;">Grant amount</th>
+      <th scope="col" class="govuk-table__header" style="text-align: right;">Score</th>
+      <th scope="col" class="govuk-table__header" style="text-align: right;"></th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
@@ -40,15 +40,28 @@
       {% set grantTotal = grantTotal + item.grantTotal %}
       {% set scoreTotal = scoreTotal + item.score %}
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell" style="width: 30%;">{{ item.termName }}</td>
-        <td class="govuk-table__cell">£{{ item.grantValue }}</td>
-        <td class="govuk-table__cell">{{ item.score }}</td>
-        <td class="govuk-table__cell">{{ item.quantity }}&nbsp;&nbsp;&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
-        <td class="govuk-table__cell"><a href="" class="govuk-body-s">Remove<span class="govuk-visually-hidden"> item</span></a></td>
+        <td class="govuk-table__cell" >{{ item.title }}</td>
+        <td class="govuk-table__cell">FETF{{ item.itemCode }}</td>
+        <td class="govuk-table__cell" style="text-align: right;">{{ item.quantity }}&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
         <td class="govuk-table__cell" style="text-align: right;">{{ item.grantTotal | currency }}</td>
+        <td class="govuk-table__cell" style="text-align: right;">{{ item.score }}</td>
+        <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
       </tr>
     {% endfor %}
+
     <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Total requested grant amount</th>
+      <td class="govuk-table__cell"></td>
+      <td class="govuk-table__cell" style="text-align: right;"></td>
+      <td class="govuk-table__header" style="text-align: right;"> {{ grantTotal | currency }}</td>
+      <td class="govuk-table__header" style="text-align: right;">{{ scoreTotal/data['selected-items'].length }}</td>
+    <td class="govuk-table__cell"></td>
+    </tr>
+
+
+
+
+    <!-- <tr class="govuk-table__row">
       <td colspan="2"></td>
       <td colspan="3" style="padding: 20px 0; border-bottom: solid 1px #b1b4b6;">Requested grant total</td>
       <td style="text-align: right; border-bottom: solid 1px #b1b4b6;">
@@ -63,7 +76,7 @@
       <td style="text-align: right; border-bottom: solid 1px #b1b4b6;">
         <span class="govuk-body-l" style="font-weight: bold;">{{ scoreTotal/data['selected-items'].length }}</span>
       </td>
-    </tr>
+    </tr> -->
   </tbody>
 </table>
 
