--- a/app/views/ftf/eoi/v2-0/index.html
+++ b/app/views/ftf/eoi/v2-0/index.html
@@ -51,7 +51,7 @@
 
 <div class="blue-box">
   <p class="govuk-body-l" style="color: white;">Guidance</p>
-  <h1 class="govuk-heading-xl" style="color: white;">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</h1>
+  <h1 class="govuk-heading-xl" style="color: white;">Check if you can apply for a Water Management grant Round 3</h1>
   <p class="govuk-body" style="color: white;">Updated 27 December 2023</p>
 </div>
 
@@ -76,7 +76,7 @@
       
       <div class="govuk-grid-column-one-third">
         <p class="govuk-body">Contents</p>
-        <p class="govuk-body"> <a href="/_common/not-testing.html">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</a></p>
+        <p class="govuk-body"> <a href="/_common/not-testing.html">Check if you can apply for a Water Management grant Round 3</a></p>
         <p class="govuk-body"> <a href="/_common/not-testing.html">Who can apply</a></p>
         <p class="govuk-body"> <a href="/_common/not-testing.html">Before you start</a></p>
         <p class="govuk-body"> <a href="/_common/not-testing.html">Problems using the online service</a></p>
@@ -84,7 +84,7 @@
 
 
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">Check if you can apply for a Farming Transformation Fund Water Management grant Round 3</h2>
+        <h2 class="govuk-heading-l">Check if you can apply for a Water Management grant Round 3</h2>
         <p class="govuk-body">Use this service to:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
@@ -145,7 +145,7 @@
         <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
         <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
         </p>
-        <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+        <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">water@rpa.gov.uk</a></p>
    
       
       </div>
