--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -236,7 +236,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">water@rpa.gov.uk</a></p>
             </div> 
   
            <br>
