Content change - shortening to 'If you have questions'

--- a/app/views/ftf/agreement/v2-0/index2.html
+++ b/app/views/ftf/agreement/v2-0/index2.html
@@ -186,9 +186,9 @@
 
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your agreement</strong><br><br>
+              <strong>If you have questions</strong><br><br>
               
-              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
