--- a/app/views/ftf/application/v3-0/email-outcome-unsuccessful.html
+++ b/app/views/ftf/application/v3-0/email-outcome-unsuccessful.html
@@ -162,9 +162,9 @@
 
        
             <div class="govuk-details__text">
-              <p class="govuk-body"><strong>If you have questions about your outcome</strong>
+              <p class="govuk-body"><strong>If you have questions</strong>
                 <br><br>
-                If you have any questions about your outcome, call the RPA and follow the options for the Farming Transformation Fund scheme.
+                If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.
               </p>
               
               
@@ -176,7 +176,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">water@rpa.gov.uk</a></p>
             </div> 
   
            <br>
