--- a/app/views/ftf/application/v3-0/email3.html
+++ b/app/views/ftf/application/v3-0/email3.html
@@ -188,9 +188,9 @@
 
        
             <div class="govuk-details__text">
-              <p class="govuk-body"><strong>If you have questions about your application</strong>
+              <p class="govuk-body"><strong>If you have questions</strong>
                 <br><br>
-                If you have any questions about your application, call the RPA and follow the options for the Farming Transformation Fund scheme.
+                If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.
               
               
               </p>
