--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -187,7 +187,7 @@
 
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your claim</strong><br><br>
+              <strong>If you have questions</strong><br><br>
               If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
 
 
