--- a/app/views/ftf/eoi/v2-0/email.html
+++ b/app/views/ftf/eoi/v2-0/email.html
@@ -170,9 +170,9 @@
            <hr style="margin: 30px 0;">
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your expression of interest</strong><br><br>
+              <strong>If you have questions</strong><br><br>
               
-              If you have questions about your expression of interest, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
