--- a/app/views/ftf/agreement/v2-0/email-agreement-accepted.html
+++ b/app/views/ftf/agreement/v2-0/email-agreement-accepted.html
@@ -210,7 +210,7 @@
             <div class="govuk-details__text">
               <strong>Questions about your agreement</strong><br><br>
               
-              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
