--- a/app/views/ftf/claim/v3-0/email-claim-submitted2.html
+++ b/app/views/ftf/claim/v3-0/email-claim-submitted2.html
@@ -158,8 +158,8 @@
 
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your claim</strong><br><br>
-              If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              <strong>If you have questions</strong><br><br>
+              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
 
 
               <p class="govuk-body">
