--- a/app/views/ftf/eoi/v2-0/email_eoi-outcome-not-accepted.html
+++ b/app/views/ftf/eoi/v2-0/email_eoi-outcome-not-accepted.html
@@ -157,9 +157,9 @@
 
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your outcome</strong><br><br>
+              <strong>If you have questions</strong><br><br>
               
-              If you have any questions about your outcome, call the RPA and follow the options for the Farming Transformation Fund scheme.
+              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.
               
               
               <p class="govuk-body">
