--- a/app/views/ftf/eoi/v2-0/email_eoi-submitted.html
+++ b/app/views/ftf/eoi/v2-0/email_eoi-submitted.html
@@ -182,7 +182,7 @@
             <div class="govuk-details__text">
               <strong>If you have questions</strong><br><br>
               
-              If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              If you have any questions, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
               
               <p class="govuk-body">
                 <strong>Telephone</strong><br>
